# mnemosyne

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  docker-compose.yaml  docker-compose.yml
example/resource/: MIGRATION.sql
mnemosyne/: Cargo.toml
mnemosyne-derive/: Cargo.toml
mnemosyne-derive/src/: lib.rs
mnemosyne-derive/src/internal/: getter.rs  mod.rs  symbol.rs
mnemosyne/src/: lib.rs
mnemosyne/src/algebra/: aggregate.rs  command.rs  engine.rs  event.rs  init.rs  inner.rs  mod.rs  record.rs  schedule.rs
mnemosyne/src/domain/: dequeue.rs  enqueue.rs  error.rs  mod.rs  process.rs  state.rs
mnemosyne/src/storage/: memory.rs  mod.rs  mongo.rs  postgres.rs
