[package]
name = "mnemosyne"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
async-trait = "0.1.74"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
log = "0.4.20"
mongodb = { version = "2.8.0" }
rdkafka = { version = "0.35.0", features = ["cmake-build", "ssl"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["full"] }
mnemosyne-derive = { path = "../mnemosyne-derive" , version = "0.1.0" , optional = true }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool = "0.10.0"
deadpool-postgres = "0.12.1"
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]


[target.'cfg(any())'.dependencies]
mnemosyne-derive = { path = "../mnemosyne-derive" , version = "0.1.0" , optional = true }

[features]
# Provides a derive macro for the `Command` and `Event` traits.

derive = ["mnemosyne-derive"]

# Provides an adapter for Mongo as a storage backend.
mongo = []

# Provides an adapter for Postgres as a storage backend.
postgres = []
