[package]
name = "mnemosyne"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
async-trait = "0.1.74"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
log = "0.4.21"
rdkafka = { version = "0.36.2", features = ["cmake-build", "ssl"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
mnemosyne-derive = { path = "../mnemosyne-derive" , version = "0.1.0" , optional = true }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool = "0.12.0"
deadpool-postgres = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.40"
ractor = { version = "0.10.3", features = ["cluster", "serde"] }

[dev-dependencies]


[target.'cfg(any())'.dependencies]
mnemosyne-derive = { path = "../mnemosyne-derive" , version = "0.1.0" , optional = true }

[features]
# Provides a derive macro for the `Command` and `Event` traits.

derive = ["mnemosyne-derive"]

# Provides an adapter for Postgres as a storage backend.
postgres = []
